# Homography_Cooperation

./: README.md
shared control/: CMakeLists.txt  README.md
shared control/include/: common.hpp  manipulator.hpp
shared control/src/: common.cpp  control.cpp  hbvs.cpp  ibvs.cpp  manipulator.cpp  pbvs.cpp  regulation.cpp
ur_test/: CMakeLists.txt  README.md
ur_test/src/: regulation.cpp
